<resources>
    <string name="app_name">ONE CHAT</string>
    <string name="one_good" translatable="false">ONEGOOD</string>
    <string name="one_bad" translatable="false">ONEBAD</string>
    <string name="format_bracket" translatable="false">(%1$s)</string>
    <string name="almost_equal_to" translatable="false">≈</string>
    <string name="viewpager_indicator" translatable="false">%1$d/%2$d</string>
    <string name="onechat_id" translatable="false">ID:&#160;</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="error_generic">Error occurred while executing commmand</string>
    <string name="error_could_not_read_wallet">Wallet access is declined</string>
    <string name="error_camera">Camera access is declined</string>
    <string name="button_ok">OK</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_default">Default</string>
    <string name="button_dismiss">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="button_retry">Retry</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="copied_to_clipboard">Copy to clipboard</string>
    <string name="wallet_locked_message">Your wallet has been encrypted</string>
    <string name="unlock_wallet_title">Unlock your wallet</string>
    <string name="unlocking_wallet_error_title">Could not unlock your wallet</string>
    <string name="unlocking_wallet_error_detail">Wrong password! Please make sure that your password is correct.  Try to restore account if the problem keeps poping.</string>
    <string name="fee">Transaction fee</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="pay_with">Send with</string>
    <string name="exchange_and_pay_title">Exchange and send</string>
    <string name="ambiguous_address_message">Please select the correct coin type</string>
    <string name="get_tx_broadcast_error">Transaction broadcast error</string>
    <string name="create_new_address">Create a new address?</string>
    <string name="create_new_address_name">Name (optional)</string>
    <string name="too_many_unused_addresses">Too many unused addresses, try to use previous addresses before creating new one.</string>
    <string name="scan_error">Error occurred while scanning: %1$s</string>
    <string name="amount_error">The provided amount is not valid</string>
    <string name="amount_error_not_enough_money_plain">Not enough balance</string>
    <string name="wallet_restoration_master_key">Creating master key</string>
    <string name="wallet_restoration_coin">Creating private key for %1$s</string>
    <string name="wallet_restoration_error">Could not restore your wallet.\n\n%1$s</string>
    <string name="enter_password">Enter your password</string>
    <string name="sent_msg">Sent! Please wait for transaction confirmation.</string>
    <string name="adding_coin_confirmation_title">Add %1$s?</string>
    <string name="adding_coin_working">Please wait while creating a new %1$s account</string>
    <string name="add_coin_error">Error occurred while adding %1$s: %2$s.</string>
    <string name="internal_transfer">Internal transfer</string>
    <string name="edit_account_description_label">Description</string>
    <string name="pref_title_restore_wallet">Restore wallet</string>
    <string name="pref_title_exchange_rates">Exchange rates</string>
    <string name="title_activity_backup_seed">Backup mnemonics</string>
    <string name="seed_not_available_title">No recovery phrase found</string>
    <string name="seed_not_available">Your recovery phrase is not saved on this device.\nTry restoring your wallet to solve this.</string>
    <string name="seed_working">Please wait&#8230;</string>
    <string name="seed_password_protected">This recovery phrase is protected with a BIP39 passphrase</string>
    <string name="touch_to_decrypt_wallet">Touch to unlock</string>
    <string name="title_activity_overview">Overview</string>
    <string name="tx_message_public">Public message</string>
    <string name="tx_message_private">Private message</string>
    <string name="title_activity_transaction_fees">Transaction fees</string>
    <string name="tx_fees_title">%1$s transaction fees</string>
    <string name="tx_fees_description">The fee value is %1$s.</string>
    <string name="tx_fees_per_kilobyte">per kilobyte of transaction data</string>
    <string name="tx_fees_per_transaction">per transaction</string>
    <string name="tx_fees_per_gas">Gas price</string>
    <string name="terms_of_service_title">Terms of service</string>
    <string name="terms_of_service">User of Terms</string>
    <string name="group_chats">Encrypted Group</string>
    <string name="open_group_chats">New Encrypted Group</string>
    <string name="password_confirm">Confirm password</string>
    <string name="menu_groupchat">Encrypted Group</string>
    <string name="menu_addfriend">Add Contacts</string>
    <string name="title_home">Decentralized Chat</string>
    <string name="tab_title_home">Chats</string>
    <string name="tab_title_wallet">Wallet</string>
    <string name="tab_title_exchange">Trade</string>
    <string name="tab_title_my">Me</string>
    <string name="menu_scan_qrcode">Scan QR code</string>
    <string name="menu_add_coin">Add Coins</string>
    <string name="unable_to_load_wif">Unable to load WIF private key</string>
    <string name="error_wif">Error occured while creating WIF key</string>
    <string name="kindly_create_account">Create account name</string>
    <string name="please_enter_6_digit_pin">Please enter PIN</string>
    <string name="pin_number_warning">The pin number must be at least 6 digits</string>
    <string name="mismatch_pin">Mismatch pin</string>
    <string name="error_invalid_account">Invalid account, please check your mnemonics for typing errors</string>
    <string name="please_enter_brainkey">Please enter mnemonics</string>
    <string name="please_enter_correct_brainkey">Please enter correct mnemonics</string>
    <string name="account_name_should_be_longer">Account name should be at least 6 digits</string>
    <string name="account_name_already_exist">Account Name %s already exists</string>
    <string name="account_name_not_exist">Account Name does not exist</string>
    <string name="account_already_exist">Account already exists</string>
    <string name="txt_no_internet_connection">No internet connection</string>
    <string name="importing_your_wallet">Import your wallet...</string>
    <string name="to_capital">To</string>
    <string name="from_capital">From</string>
    <string name="ok">Ok</string>
    <string name="str_balance_available">%1$s %2$s available</string>
    <string name="date_time_zone">TimeZone</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="try_again">Please try again after 1 minutes</string>
    <string name="unable_to_load_brainkey">Unable to load mnemonics</string>
    <string name="error_read_dict_file">Error occured while reading dictionary file</string>
    <string name="error_with_message">Error: %s</string>
    <string name="error_no_message">An error occurred while this operation</string>
    <string name="account_name_must_include_dash_and_a_number">Names must include a dash (-) and a number</string>
    <string name="validation_in_progress">Validation in progress..</string>
    <string name="last_letter_cannot">last letter cannot be -</string>
    <string name="unable_to_generate_bin_format_for_key">Unable to generate bin format for key</string>
    <string name="saving_bin_file_to">Save Bin file to</string>
    <string name="folder_name">onechain</string>
    <string name="bin_file_saved_successfully_to">Bin File saved successfully</string>
    <string name="unable_to_save_bin_file">Unable to save bin file</string>
    <string name="creating_backup_file">Create backup file</string>
    <string name="fetching_key">Fetching Key</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="generating_bin_format">Generating bin format</string>
    <string name="is_already_added">Already added</string>
    <string name="secure_key_important">Mnemonics are very important, please input under a secure situation!</string>
    <string name="accountname_create_username">Account</string>
    <string name="accountname_create_username_tips">Only support lowercase and number, at least 6 characters</string>
    <string name="accountname_create_nickname">Alias</string>
    <string name="accountname_create_nickname_tips">Please input your alias</string>
    <string name="accountname_create_password_tips">Your password should be at least 8 characters</string>
    <string name="accountname_create_password_tips2">Confirm your password again, at least 8 characters</string>
    <string name="accountname_restore_key">Mnemonics</string>
    <string name="accountname_restore_key_tips">Please enter mnemonics,Mnemonics generated by other Apps are not recommended</string>
    <string name="accountname_friend_username_tips">Friend Account</string>
    <string name="accountname_friend_nickname">Alias</string>
    <string name="accountname_friend_nickname_tips">Local frineds alias</string>
    <string name="accountname_search">Search</string>
    <string name="action_ok">Ok</string>
    <string name="accountname_create_title">Create Account</string>
    <string name="accountname_restore_title">Restore Account</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="accountname_create_loading">Creating account...</string>
    <string name="accountname_add_loading">Adding friend...</string>
    <string name="create_groupchat_loading">Creating group chat...</string>
    <string name="action_have_saved">I have saved</string>
    <string name="default_chat_sentence">We are friends now, let\'s chat!</string>
    <string name="default_groupchat_sentence">&#160; invite %s to join group chat!</string>
    <string name="feature_come_soon">Please wait, it\'s coming soon!</string>
    <string name="default_friend_name">Friend</string>
    <string name="default_group_name">Encrypted group</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Sent</string>
    <string name="button_pushtotalk">Press to talk</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Photo</string>
    <string name="attach_location">Location</string>
    <string name="attach_file">File</string>
    <string name="attach_video_call">Video call</string>
    <string name="move_up_to_cancel">Slide up to cancel</string>
    <string name="send_fail">Send fail</string>
    <string name="delete_message">Delete message</string>
    <string name="password">Password</string>
    <string name="sex">Gender</string>
    <string name="man">Male</string>
    <string name="women">Female</string>
    <string name="user_contract">User Agreement</string>
    <string name="user_contract_txt">The Software hereby agree to abide by and comply with all applicable local, state, national, and international laws and regulations, international conventions, and customs. Please stop using One if it violates any of  above.</string>
    <string name="contacts">Contacts</string>
    <string name="string_rule_account_name" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz-</string>
    <string name="write_referrer_account">Please enter the invitation code</string>
    <string name="invitation_code_must">Invitation code(Optional ):</string>
</resources>